--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="lead" class="lazyload" data-bg="images/photos/img-sample04.jpg">
       <div id="lead-content">
         <h1>Some Kinda Angel</h1>
-        <span>2014/11/29</span>
-        <span>福岡 薬院UTERO</span>
+        <span>2017/06/03</span>
+        <span>パルテノン多摩 1F</span>
         <h2>Dummy Title Description</h2>
         <a href="#contact" class="btn-rounded-white" data-scroll>予約する</a>
       </div>
@@ -121,15 +121,15 @@
           <div class="col-sm-7 info-content">
             <dl>
               <dt>Title</dt>
-              <dd>Some Kinda Angel</dd>
+              <dd>Dummy Event Title</dd>
               <dt>Date</dt>
-              <dd>2014 / 11 / 29</dd>
+              <dd>2017/06/03</dd>
               <dt>OPEN/START</dt>
-              <dd>18:00 / 18:30</dd>
+              <dd>18:00/18:30</dd>
               <dt>Place</dt>
-              <dd>薬院UTERO<br>福岡県福岡市中央区清川2丁目6-34</dd>
+              <dd>パルテノン多摩<br>東京都多摩市落合2-35</dd>
               <dt>Ticket</dt>
-              <dd>2,000 yen</dd>
+              <dd>2,000 円</dd>
             </dl>
           </div>
 
