--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container">
         <h2 class="heading">About</h2>
         <p>
-          このダミーテキストは自由に改変することが出来ます。<br>
+          このダミーテキストは自由に改変することが出来ます。oooooo<br>
           この組見本は<a href="#">自由に複製したり頒布</a>することができます。<br>
           書体やレイアウトなどを確認するために用います。<br>
           なお、組見本の「組」とは文字組のことです。活字印刷時代の用語だったと思います。書体やレイアウトなどを確認するために用います。<br>
